Added Actual Jupyter Notebooks of Course 2

--- a/Deep Learning Specialisation/Convolutional Neural Networks/Art Generation with Neural Style Transfer.ipynb
+++ b/Deep Learning Specialisation/Convolutional Neural Networks/Art Generation with Neural Style Transfer.ipynb
@@ -1088,8 +1088,93 @@
       "Iteration 40 :\n",
       "total cost = 4.84905e+08\n",
       "content cost = 16785.1\n",
-      "style cost = 1.21184e+07\n"
+      "style cost = 1.21184e+07\n",
+      "Iteration 60 :\n",
+      "total cost = 3.12573e+08\n",
+      "content cost = 17466.2\n",
+      "style cost = 7.80995e+06\n",
+      "Iteration 80 :\n",
+      "total cost = 2.28117e+08\n",
+      "content cost = 17715.2\n",
+      "style cost = 5.69849e+06\n",
+      "Iteration 100 :\n",
+      "total cost = 1.80691e+08\n",
+      "content cost = 17894.8\n",
+      "style cost = 4.51281e+06\n",
+      "Iteration 120 :\n",
+      "total cost = 1.50008e+08\n",
+      "content cost = 18026.0\n",
+      "style cost = 3.7457e+06\n",
+      "Iteration 140 :\n",
+      "total cost = 1.278e+08\n",
+      "content cost = 18187.2\n",
+      "style cost = 3.19046e+06\n",
+      "Iteration 160 :\n",
+      "total cost = 1.10793e+08\n",
+      "content cost = 18347.5\n",
+      "style cost = 2.76524e+06\n",
+      "Iteration 180 :\n",
+      "total cost = 9.7414e+07\n",
+      "content cost = 18489.9\n",
+      "style cost = 2.43073e+06\n"
      ]
+    },
+    {
+     "data": {
+      "text/plain": [
+       "array([[[[ -47.73377228,  -61.45243073,   48.97315598],\n",
+       "         [ -26.31189537,  -40.58193207,   27.0661335 ],\n",
+       "         [ -41.8727951 ,  -29.02404213,   11.30196953],\n",
+       "         ..., \n",
+       "         [ -26.7917614 ,   -9.48778915,   14.31685352],\n",
+       "         [ -30.16067696,   -2.84961033,   24.10363197],\n",
+       "         [ -42.1235466 ,   -3.88472581,   49.48160553]],\n",
+       "\n",
+       "        [[ -61.32364273,  -51.80856323,   25.36137772],\n",
+       "         [ -33.13545609,  -31.11461449,   -1.5055809 ],\n",
+       "         [ -27.23316383,  -30.72574806,   15.14230442],\n",
+       "         ..., \n",
+       "         [ -26.7071743 ,   -5.09085131,   26.03926468],\n",
+       "         [ -21.29836273,  -16.81573868,   14.04346657],\n",
+       "         [ -40.51535797,   -5.95415401,    9.61536217]],\n",
+       "\n",
+       "        [[ -52.39395523,  -51.67505646,   13.53587055],\n",
+       "         [ -37.26718903,  -41.49274445,   -6.32556581],\n",
+       "         [ -34.27748871,  -25.3261528 ,    7.26732111],\n",
+       "         ..., \n",
+       "         [ -10.59381199,  -37.26689529,   12.60066128],\n",
+       "         [ -12.18658733,  -20.8663044 ,   17.25569916],\n",
+       "         [ -22.41463852,  -18.40548325,   14.38854408]],\n",
+       "\n",
+       "        ..., \n",
+       "        [[ -49.19630051,  -54.40068054,  -38.16020584],\n",
+       "         [ -97.97686768,  -76.93914032, -269.10314941],\n",
+       "         [ -75.52911377,  -71.50273895, -143.14122009],\n",
+       "         ..., \n",
+       "         [ -69.52451324,  -69.76721954,  -29.45156097],\n",
+       "         [ -78.77581787,  -87.30848694,  -22.49624634],\n",
+       "         [   1.61092412,  -39.0134964 ,   23.64526367]],\n",
+       "\n",
+       "        [[  -1.64893639,  -74.97692108,   13.64721489],\n",
+       "         [-173.95082092, -102.45560455,  -31.08411407],\n",
+       "         [   6.60944176,  -70.63833618,  -20.71807098],\n",
+       "         ..., \n",
+       "         [ -95.62519073,  -83.87038422,  -47.6277504 ],\n",
+       "         [-102.13822174, -102.30825043,  -59.38232422],\n",
+       "         [ -65.69796753,  -95.28787231,    1.5396843 ]],\n",
+       "\n",
+       "        [[  49.75661469,  -21.7081089 ,   52.19393921],\n",
+       "         [  31.33464813,  -84.65373993,   25.93981934],\n",
+       "         [  29.99043655,  -40.04895782,   16.80765533],\n",
+       "         ..., \n",
+       "         [ -99.44702911, -107.64768219,  -17.24529076],\n",
+       "         [-117.32874298, -144.16285706,  -27.48231888],\n",
+       "         [ -25.26028442, -104.8323288 ,   20.59063911]]]], dtype=float32)"
+      ]
+     },
+     "execution_count": 41,
+     "metadata": {},
+     "output_type": "execute_result"
     }
    ],
    "source": [
